syntax = "proto3";

option java_multiple_files = true;
option java_package = "test.no_methods";

package test;

service NoMethods {
	
	
}
